cargo-features = ["strip"]

[package]
name = "amp-rs"
version = "1.2.5"
edition = "2021"
publish = true
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs", "images/*", "data/*",]
description = "AMP (Another Music Player)"
homepage = "https://github.com/mark-summerfield/amp-rs"
readme = "README.md"
keywords = [ "fltk", "audio", "music", "player", "gui",]
categories = [ "multimedia::audio",]
license = "GPL-3.0"

[dependencies]
chrono = "^0.4"
dirs = "^4"
lofty = "^0.5"
num = "^0.4"
rust-ini = "^0.18"
rustc_version_runtime = "^0.2"
state = "^0.5"

[dependencies.fltk]
version = "^1.2"
features = [ "no-pango",]
git = "https://github.com/fltk-rs/fltk-rs"

[dependencies.soloud]
version = "^1"
git = "https://github.com/moalyousef/soloud-rs"

[badges.maintenance]
status = "passively-maintained"

[profile.release]
strip = true
opt-level = "s" # 3 is fastest binary; use "s" for smallest
lto = true
codegen-units = 1
